--- a/Styles/main.css
+++ b/Styles/main.css
@@ -15,9 +15,23 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
+  font-family: "Rubik", "Arial", sans-serif;
+  font-style: 16px;
+  line-height: 22px;
+  color: #4a4b4c;
+  background-color: #fff;
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+.container {
+  width: 100%;
+  max-width: 1240px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
